--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "1.9.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -16,12 +17,17 @@
     "antd": "^4.22.8",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "gapi-script": "^1.2.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.3.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
@@ -51,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-facebook-login": "^4.1.5",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
