--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
+    "redux": "^4.2.1",
     "swiper": "^8.3.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
