--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@react-oauth/google": "^0.7.1",
     "@reduxjs/toolkit": "1.9.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -29,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
+    "redux": "^4.2.1",
     "swiper": "^8.3.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
