--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.22.8",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "gapi-script": "^1.2.0",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,6 +60,8 @@
     ]
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
+    "@types/lodash": "^4.14.191",
     "@types/react-facebook-login": "^4.1.5",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
